# eng-learner

./: .gitignore  ABOUT.md  LICENSE  README.md  README_zh.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/scripts/: get_transcript.py
backend/src/: main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: ai.rs  auth.rs  history.rs  invite.rs  mod.rs  notes.rs  stats.rs  upload.rs  usage.rs  video.rs  vocabulary.rs
backend/src/services/: ai.rs  mod.rs  r2.rs  youtube.rs
frontend/: .env.example  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  main.tsx
frontend/src-tauri/: tauri.conf.json
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  ProFeatureGate.tsx
frontend/src/components/AIChat/: ChatMessage.tsx  index.tsx
frontend/src/components/AIReview/: index.tsx
frontend/src/components/AboutPage/: index.tsx
frontend/src/components/AuthDialog/: index.tsx
frontend/src/components/CurrentSubtitle/: index.tsx
frontend/src/components/FloatingAI/: index.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/ui/: input.tsx  (+5 more)
frontend/src/data/: demoVideo.ts
frontend/src/hooks/: useYouTubePlayer.ts
frontend/src/lib/: firebase.ts
frontend/src/store/: authStore.ts  watchHistoryStore.ts
frontend/src/stores/: noteStore.ts  videoStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
(+20 files in other folders)
