[package]
name = "eng-learner-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
anyhow = "1"
regex = "1"
dotenvy = "0.15"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
jsonwebtoken = "9"
tower = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
uuid = { version = "1", features = ["v4"] }
